testing/tests/00main/errors/invalid_ret_syntax_2.sasc
//! BUILD_RETURNS=1

fn main() {
	return = 0;
}